# signal-mind-judge

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  skills.md
schema/: signal.schema
src/: lib.rs
tests/: scaffold.rs
