[package]
name         = "signal-mind-judge"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-mind-judge"
description  = "Typed Mind judge request and reply Signal contract."
publish      = false

[lib]
name = "signal_mind_judge"
path = "src/lib.rs"

[features]
default = []
nota-text = ["signal-frame/nota-text"]

[dependencies]
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
thiserror    = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
